--- a/views/searchResult.pug
+++ b/views/searchResult.pug
@@ -6,5 +6,5 @@ block content
   div(class="container p-2")
     div(class="row")
       .col.text-center
-        img#profileIcon(src="http://ddragon.leagueoflegends.com/cdn/9.22.1/img/profileicon/" + profileIconId + ".png", alt="Profile icon")
-        h2.p-3= summoner + ' - Level ' + summonerLevel
+        img#profileIcon(src="http://ddragon.leagueoflegends.com/cdn/9.22.1/img/profileicon/" + result.profileIconId + ".png", alt="Profile icon")
+        h2.p-3= result.name + ' - Level ' + result.summonerLevel
