+matchlist (view, api functions and server logic)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,10 +16,19 @@ html * {
   height: 100px;
 }
 
+.cap {
+  text-transform: lowercase;
+}
+
+.cap::first-letter {
+  text-transform: uppercase;
+}
+
 .btnMainColor {
   background-color: #aaa1c8;
   border-color: #aaa1c8;
 }
+
 
 .btnMainColor:hover,
 .btnMainColor:active,
