--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,8 +31,8 @@ html(lang="en")
     div(class="container-fluid")
       div(class="row p-3")
         div(class="col")
-          h1(class="text-center") Riot Stalker
-          h2(class="text-center") Stalk your friends!
+          h1(class="text-center") Treeline
+          h2(class="text-center") Don't get lost!
 
     //- Content
     block content
