added loading icon to show whne searching

--- a/views/search.pug
+++ b/views/search.pug
@@ -15,4 +15,6 @@ block content
         input(type="text", name="summoner", class="form-control", id="summonerSearch", placeholder="Summoner ID")
         small(id="summonerSearchHelp", class="form-text text-muted") Currently only supporting EUW.
       div(class="col-auto")
-        button(type="submit", class="btn btn-primary btnMainColor", id="summonerSearchSubmit") Submit
+        button(type="submit", class="btn btn-primary btnMainColor", id="summonerSearchSubmit" onclick="showLoadingIcon('summonerSearchForm')") Submit
+
+    include loading.pug
