--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,8 +8,9 @@ html(lang="en")
     link(rel="stylesheet", href="/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/index.css")
     link(rel="stylesheet", href="/css/loading.css")
-    script(src="/js/loading.js")
-    title Riot Stalker
+    script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
+    script(src="/js/main.js")
+    title Treeline
 
   body
     main(class="wrapper")
@@ -21,8 +22,8 @@ html(lang="en")
     div(class="container-fluid")
       div(class="row p-3")
         div(class="col")
-          h1(class="text-center") Treeline
-          h2(class="text-center") Don't get lost!
+          h1(class="text-center return") Treeline
+          h2(class="text-center return") Don't get lost!
 
     //- Content
     block content
