--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,8 @@ html(lang="en")
     link(rel="stylesheet", href="/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/index.css")
     link(rel="stylesheet", href="/css/loading.css")
-    script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
+    link(rel="shortcut icon", href="/images/favicon.ico", type="image/x-icon")
+    script(src="/js/jquery-3.4.1.min.js")
     script(src="/js/main.js")
     title Treeline
 
