--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,8 +24,10 @@ html(lang="en")
       .container-fluid
         .row.p-3
           .col
-            h1.text-center.return Treeline
-            h2.text-center.return Don't get lost!
+            h1.text-center
+              a.return(href="/") Treeline
+            h2.text-center 
+              a.return(href="/") Don't get lost!
 
       //- Content
       block content
