--- a/views/champ_test.pug
+++ b/views/champ_test.pug
@@ -12,7 +12,7 @@ block content
             .row.card-body
               .col
                 img.card-img(src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/" + champ.id + "_0.jpg", alt="...")
-              .col= champ.blurb
+              .col= champ.blurb.split('.')[0] + '.'
 
   h1 Champion Cards Version 2
   .container-fluid.p-3
@@ -26,7 +26,7 @@ block content
               .col.md-8
                 .card-body
                   h5.card-title= champ.name + ', ' + champ.title
-                  p.card-text= champ.blurb
+                  p.card-text= champ.blurb.split('.')[0] + '.'
 
   h1 Champion Cards Version 3
   div(class="container-fluid p-3")
@@ -38,7 +38,7 @@ block content
             .row.card-body
               .col
                 img.card-img(src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/" + champ.id + "_0.jpg", alt="...")
-              .col= champ.blurb
+              .col= champ.blurb.split('.')[0] + '.'
 
   h1 Champion Cards Version 4
   .container-fluid.p-3
@@ -52,4 +52,4 @@ block content
               .col.md-8
                 .card-body
                   h5.card-title= champ.name + ', ' + champ.title
-                  p.card-text= champ.blurb
+                  p.card-text= champ.blurb.split('.')[0] + '.'
