--- a/views/filter.pug
+++ b/views/filter.pug
@@ -1,5 +1,5 @@
 .row.justify-content-center
-  .container.p-3
+  .container
     form.form-row.justify-content-center#summonerSearchFilter(action="/search", method="post")
       .col-auto
         select(type="text", name="champion", class="form-control", id="championFilter", placeholder="Champion ID")
