--- a/views/champ_test.pug
+++ b/views/champ_test.pug
@@ -1,5 +1,15 @@
 extends layout.pug
 
+block navigation
+
+  include navigation
+    .collapse.navbar-collapse#navbarSupportedContent
+      ul.navbar-nav.mr-auto
+        li.nav-item
+          a.nav-link(href="/search") Search
+        li.nav-item.active
+          a.nav-link(href="/champ") Champions
+          
 block content
 
   h1 Champion Cards Version 1
