--- a/views/error.pug
+++ b/views/error.pug
@@ -1,5 +1,15 @@
 extends layout
 
+block navigation
+
+  include navigation
+    .collapse.navbar-collapse#navbarSupportedContent
+      ul.navbar-nav.mr-auto
+        li.nav-item
+          a.nav-link(href="/search") Search
+        li.nav-item
+          a.nav-link(href="/champ") Champions
+
 block content
 
   div.container.p-5.text-center
