--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,5 +1,9 @@
 nav(class="navbar navbar-expand-sm navbar-light sticky-top")
-  a(href="#", class="github-corner", aria-label="View source code on GitHub")
+  a.navbar-brand(href="/") Statlane
+  button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarSupportedContent", aria-controls="navarSupportedContent", aria-expanded="false", aria-label="Toggle navigation")
+    span.navbar-toggler-icon
+
+  a(href="https://github.com/iTReprise/treeline", class="github-corner", aria-label="View source code on GitHub")
     svg(wdith="80", height="80", viewBox="0 0 250 250", aria-hidden="true")
       path(d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z")
       path(d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2", fill="currentColor", style="transform-origin: 130px 106px;", class="octo-arm")
