added simple skill descriptions, added skins

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,6 +54,11 @@ html * {
   overflow-y: visible;
 }
 
+.champs {
+  height: calc(100vh - 250px);
+  overflow-y: visible;
+}
+
 /*
 ** Github Corner-Banner
 ** MIT License
