--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,7 @@ html(lang="en")
     link(rel="stylesheet", href="/css/simplebar.css")
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/x-icon")
     script(src="/js/jquery-3.4.1.min.js")
+    script(src="/js/bootstrap.min.js")
     script(src="/js/simplebar.min.js")
     script(src="/js/main.js")
 
