--- a/views/search.pug
+++ b/views/search.pug
@@ -16,7 +16,7 @@ block content
   div(class="container p-3")
     div(class="row")
       div(class="col")
-        h3(class="text-center") You want to find out if your friends are still alive? Go check on them and find out when they played their last game of League/TFT. Because we all know, that even if someone disappears from all social media, their League addiction won't cease!
+        h3(class="text-center") You want to find out if your friends are still alive? Go check on them and find out when they played their last game of League. Because we all know, that even if someone disappears from all social media, their addiction won't cease!
 
   //- Summoner search form
   div(class="container p-3")
