--- a/views/test.pug
+++ b/views/test.pug
@@ -13,7 +13,7 @@ block navigation
 block content
   
   .container.p-3.champs(style="width: 85%", data-simplebar)
-    each champ in result.data
+    each champ in r.data
     
       //- Champ introduction
       .row
